issue #195 #191 : Made all the changes
I had modified Hacktoberfest 2020 to Hacktoberfest 2021 . Also, I had added my info on the website and made all the required changes.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Hacktoberfest 2020</title>
+    <title>Hacktoberfest 2021</title>
 </head>
 <body>
-    <h1>Hacktoberfest 2020</h1>
-    <p>Name : YourName</p>
-    <p>Country of Residence : Country</p>
-    <img src="" alt="your potrait image">
+    <h1>Hacktoberfest 2021</h1>
+    <p>Name : <span class="name">Ayush Agarwal</span></p>
+    <p>Country of Residence : <i><span class="I1">I</span><span class="N">n</span><span class="D">d</span><span class="I2">i</span><span class="A">a</span> </i></p>
+	<p>Age : <span class="age">20</span> </p>
+    <img src="Ayush_Agarwal.jpeg" alt="your potrait image" class="image">
 </body>
 </html>
